delete coin panel button

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,14 @@
   list-style-type: none;
   margin-bottom: 1%;
 }
+
+.x-button {
+  font-size: 10px;
+  margin-bottom: 0;
+}
+
+.coin-name {
+}
+
+.coin-price {
+}
